just a bunch of renaming

--- a/lib/zeroClipboard/.jshintrc
+++ b/lib/zeroClipboard/.jshintrc
@@ -17,7 +17,7 @@
   "nonbsp": true,
   "nonew": true,
   "plusplus": false,
-  "quotmark": "double",
+  "quotmark": "single",
   "undef": true,
   "unused": true,
   "strict": true,
